@@ -22,9 +22,9 @@ CFLAGS = -O3
 
 
 MCMCOBJ = mcmc_main.o mcmc_mcmc.o mcmc_templates.o mcmc_routines.o mcmc_data.o mcmc_parameters.o mcmc_signal.o mcmc_3rdparty.o 
-DEF_CFLAGS = -I/usr/include -I./include -I ~/bin/include   -I /opt/lscsoft/lal/include  -I /opt/lscsoft/libframe/include
+DEF_CFLAGS = -I/usr/include -I./include -I ~/bin/include   -I /opt/lscsoft/lal/include -I /opt/lscsoft/libmetaio/include  -I /opt/lscsoft/libframe/include
 DEF_LFLAGS = -L/opt/lscsoft/libframe/lib64 -lFrame -lfftw3 -lfftw3f -lgsl -lgslcblas -lm  		
-LAL_LFLAGS = -L /opt/lscsoft/lal/lib64/ -llal 
+LAL_LFLAGS = -L /opt/lscsoft/lal/lib64/ -llal -llalmetaio
 
 
 
@@ -32,7 +32,8 @@ LAL_LFLAGS = -L /opt/lscsoft/lal/lib64/ -llal
 %.o: %.c Makefile include/mcmc.h
 	$(CC) $(CFLAGS) $(DEF_CFLAGS) -c $<
 
-all: mcmc_nolal mcmc_lal SPINspiral
+#all: mcmc_nolal mcmc_lal SPINspiral
+all: SPINspiral
 
 exit: 
 
@@ -50,8 +51,8 @@ mcmc_nolal: $(MCMCOBJ) mcmc_nolal.o
 mcmc_lal: $(MCMCOBJ) mcmc_lal.o
 	$(CC) -o mcmc_lal $(MCMCOBJ) mcmc_lal.o $(LAL_LFLAGS) $(DEF_LFLAGS)
 
-SPINspiral: mcmc_lal
-	cp -f mcmc_lal SPINspiral
+SPINspiral: $(MCMCOBJ) mcmc_lal.o
+	$(CC) -o SPINspiral $(MCMCOBJ) mcmc_lal.o $(LAL_LFLAGS) $(DEF_LFLAGS)
 
 
 
